k8s/Manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: arbaazij/back_jnks:33
          ports:
            - containerPort: 5000
