k8s/Manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: arbaazij/front_jnks:latest
          ports:
            - containerPort: 3000
