k8s/Manifests/backend-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
