k8s/Manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
