k8s/Manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
