k8s/Manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
